--- a/index.html
+++ b/index.html
@@ -9,16 +9,36 @@
 <body>  
     <header>
       <nav>
-        <ul>
+        <ul class="nav-right-section">
           <li><a href="#">Gmail</a></li>
           <li><a href="#">imágenes</a></li>
-          <li><a href="#">Icon</a></li>
-          <li><a href="#">Foto</a></li>
+          <li class="menu-icon"><a href="#"></a></li>
+          <li><a href="#"><img src="https://lh3.googleusercontent.com/ogw/ADGmqu8If7lpzzvw_C9QEzxpy9PFriZNJPltl14g_wfnoQ=s32-c-mo" alt="Emanuel Campos Perfil"></a></li>
         </ul>
       </nav>
     </header>
-    <main></main>
-    <footer>
+    <main>
+      <section class="main-logo">
+        <img src="https://assets.stickpng.com/images/580b57fcd9996e24bc43c51f.png" alt="Google logo">
+      </section>
+      <section class="main-input">
+        <div class="main-input-container">
+          <span class="search-icon">            
+          </span>
+          <input type="text" >
+          <a href="" class="micro-icon"></a>
+        </div>
+      </section>
+      <section class="main-buttons">
+        <div>
+          <button type="button">Buscar con Google</button>
+        </div>
+        <div>
+          <button type="button">Me siento con suerte</button>
+        </div>
+      </section>
+    </main>
+    <!-- <footer>
       <ul>
         <li><a href="#">Publicida</a></li>
         <li><a href="#">Negocios</a></li>
@@ -31,6 +51,6 @@
         <li><a href="#">Condiciones</a></li>
         <li><a href="#">Preferencias</a></li>
       </ul>
-    </footer>  
+    </footer>   -->
 </body>
 </html>
