clases de footer y culmincacion del pryeecto

--- a/index.html
+++ b/index.html
@@ -38,19 +38,18 @@
         </div>
       </section>
     </main>
-    <!-- <footer>
-      <ul>
-        <li><a href="#">Publicida</a></li>
+    <footer>
+      <ul class="footer-left">
+        <li><a href="#">Publicidad</a></li>
         <li><a href="#">Negocios</a></li>
-        <li><a href="#">Acerca de</a></li>
-        <li><a href="#">Cómo funciona</a></li>
-        <li><a href="#">Búsqueda</a></li>
+        <li><a href="#">Sobre Google</a></li>
+        <li><a href="#">Cómo funciona la búsqueda</a></li>        
       </ul>
-      <ul>
-        <li><a href="#">Privacida</a></li>
+      <ul class="footer-right">
+        <li><a href="#">Privacidad</a></li>
         <li><a href="#">Condiciones</a></li>
         <li><a href="#">Preferencias</a></li>
       </ul>
-    </footer>   -->
+    </footer>  
 </body>
 </html>
